# ad39

./: LICENSE  README.md  d_0439d56fdbca22c3___init___py.html  d_0439d56fdbca22c3_forward_core_py.html  d_0439d56fdbca22c3_forward_helpers_py.html  d_5ef8aa98463964c3___init___py.html  d_5ef8aa98463964c3_reverse_core_py.html  d_5ef8aa98463964c3_reverse_helpers_py.html  d_b98b6f1771bcdad0___init___py.html  d_b98b6f1771bcdad0_reverse_core_py.html  d_b98b6f1771bcdad0_reverse_helpers_py.html  d_eb338b2aa4733f3a___init___py.html  d_eb338b2aa4733f3a_core_py.html  d_f11dd6b9bce0cdc9___init___py.html  d_f11dd6b9bce0cdc9_core_py.html  d_f6487ff6192bcbfd___init___py.html  d_f6487ff6192bcbfd_forward_core_py.html  d_f6487ff6192bcbfd_forward_helpers_py.html  index.html  setup.cfg  status.json
.github/workflows/: coverage.yml  test.yml
docs/: documentation.ipynb  m2-install.sh  milestone1.ipynb  milestone2.ipynb  milestone2_progress.md
src/ad39_package/: __init__.py  core.py
src/ad39_package/forward/: __init__.py  forward_core.py  forward_helpers.py
src/ad39_package/reverse/: __init__.py  reverse_core.py  reverse_helpers.py
tests/: check_coverage.py  check_coverage.sh  run_tests.sh  test_core.py  test_forward_core.py  test_forward_helpers.py  test_reverse_core.py  test_reverse_helpers.py
