[metadata]
name = ad39_package
version = 0.0.15
author = Philipp Arens, Ben Ray, Andy Zhuo
author_email = parens@g.harvard.edu, benray@college.harvard.edu, azhuo@college.harvard.edu
description = CS107/AC207 Class Project Package Team39
long_description = file: README.md
long_description_content_type = text/markdown
url = https://code.harvard.edu/CS107/team39
classifiers =
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir =
    =src
packages = find:
install_requires =
    python_version>="3.8"
    numpy
    matplotlib
    networkx

[options.packages.find]
where = src